[package]
name = "fecho"
description = "A simple tool to echo multiple files, text, or piped values."
authors = ["LGXerxes"]
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/LGXerxes/fecho"
repository = "https://github.com/LGXerxes/fecho"
readme = "README.md"
license = "MIT"
keywords = ["cli"]
categories = ["command-line-interface"]

[[bin]]
name = "fecho"
path = "src/main.rs"

[dependencies]
atty = "0.2.14"
clap = { version = "4.4.8", features = ["derive"] }
