[package]
name = "fecho"
description = "A simple tool to echo multiple files, text, or piped values."
authors = ["LGXerxes"]
version = "0.3.2"
edition = "2021"
homepage = "https://github.com/LGXerxes/fecho"
repository = "https://github.com/LGXerxes/fecho"
readme = "README.md"
license = "MIT"
keywords = ["cli"]
categories = ["command-line-interface"]

[[bin]]
name = "fecho"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
